--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,13 @@ header img {
   display: block;
 }
 
+nav {
+  display: flex;             /* active flex */
+  justify-content: flex-end; /* aligne à droite */
+  background-color: #3a5e1a; /* ton vert Tolkien */
+  padding: 20px;             /* optionnel pour respirer */
+}
+
 nav ul {
   list-style: none;
   margin: 0;
@@ -42,7 +49,6 @@ nav ul li a {
 nav ul li a:hover {
   text-decoration: underline;
 }
-
 main {
   max-width: 1000px;
   margin: 40px auto;
