--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,10 @@ section img {
   transition: transform 0.3s ease;
 }
 
+.fiche-livre{
+  border-left: 6px solid #7293A0; /* bleu Oravendis */
+}
+
 footer {
   background-color: #3A5F0B;
   color: #fff;
